update with projects

--- a/public/about_me/about_me.html
+++ b/public/about_me/about_me.html
@@ -6,18 +6,18 @@
 -->
 <html>
 	<head>
-		<link rel="apple-touch-icon" sizes="180x180" href="../../public/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../../public/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="../../public/favicon-16x16.png">
-		<link rel="manifest" href="../../public/site.webmanifest">
-		<link rel="mask-icon" href="../../public/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
+		<link rel="manifest" href="../../site.webmanifest">
+		<link rel="mask-icon" href="../../safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		<title>About Me</title>
+		<title>About Luke Schwaller</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../../public/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="../../public/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../../public/index.html" class="logo">Luke Schwaller</a>
+						<a href="../../index.html" class="logo">Luke Schwaller</a>
 					</header>
 
 				<!-- Nav -->
@@ -59,7 +59,7 @@
 							<section class="major">
 								<p>
 									<span class="image left">
-										<img src="../../public/images/About_me.jpg" alt="" />
+										<img src="../../images/About_me.jpg" alt="" />
 									</span>
 									I am a mechanical engineer, with a deep passion for data science. During the course of
 								my bachelors in mechanical engineering I found a deep passion for programming complex systems
@@ -105,13 +105,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../../public/assets/js/jquery.min.js"></script>
-			<script src="../../public/assets/js/jquery.scrollex.min.js"></script>
-			<script src="../../public/assets/js/jquery.scrolly.min.js"></script>
-			<script src="../../public/assets/js/browser.min.js"></script>
-			<script src="../../public/assets/js/breakpoints.min.js"></script>
-			<script src="../../public/assets/js/util.js"></script>
-			<script src="../../public/assets/js/main.js"></script>
+			<script src="../../assets/js/jquery.min.js"></script>
+			<script src="../../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../../assets/js/browser.min.js"></script>
+			<script src="../../assets/js/breakpoints.min.js"></script>
+			<script src="../../assets/js/util.js"></script>
+			<script src="../../assets/js/main.js"></script>
 
 	</body>
 </html>
