--- a/public/projects/projects.html
+++ b/public/projects/projects.html
@@ -6,18 +6,18 @@
 -->
 <html>
 	<head>
-		<link rel="apple-touch-icon" sizes="180x180" href="../../public/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../../public/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="../../public/favicon-16x16.png">
-		<link rel="manifest" href="../../public/site.webmanifest">
-		<link rel="mask-icon" href="../../public/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
+		<link rel="manifest" href="../../site.webmanifest">
+		<link rel="mask-icon" href="../../safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		<title>Projects</title>
+		<title>Luke Schwaller's Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../../public/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="../../public/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../../public/index.html" class="logo">Luke Schwaller</a>
+						<a href="../../index.html" class="logo">Luke Schwaller</a>
 					</header>
 
 				<!-- Nav -->
@@ -59,12 +59,12 @@
 								<article>
 									<header>
 										<span class="date">May 13, 2023</span>
-										<h2><a href="AVPG.html">I want a talking cat </br> Part 1</a></h2>
+										<h2><a href="../projects/talking_buttons_one.html">I want a talking cat </br> Part 1</a></h2>
 									</header>
-									<a href="AVPG.html" class="image fit"><img src="../../public/images/sandy.jpg" width=30%; height="auto" alt="My Cat Sandy" /></a>
+									<a href="../projects/talking_buttons_one.html" class="image fit"><img src="../../images/sandy.jpg" width=30%; height="auto" alt="My Cat Sandy" /></a>
 									<p>Everyone is teaching their pets to talk using expensive buttons, can I make it cheaper?</p>
 									<ul class="actions special">
-										<li><a href="AVPG.html" class="button">Full Story</a></li>
+										<li><a href="../projects/talking_buttons_one.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
@@ -101,13 +101,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../../public/assets/js/jquery.min.js"></script>
-			<script src="../../public/assets/js/jquery.scrollex.min.js"></script>
-			<script src="../../public/assets/js/jquery.scrolly.min.js"></script>
-			<script src="../../public/assets/js/browser.min.js"></script>
-			<script src="../../public/assets/js/breakpoints.min.js"></script>
-			<script src="../../public/assets/js/util.js"></script>
-			<script src="../../public/assets/js/main.js"></script>
+			<script src="../../assets/js/jquery.min.js"></script>
+			<script src="../../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../../assets/js/browser.min.js"></script>
+			<script src="../../assets/js/breakpoints.min.js"></script>
+			<script src="../../assets/js/util.js"></script>
+			<script src="../../assets/js/main.js"></script>
 
 	</body>
 </html>
