--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="../public/index.html">Resume</a></li>
-							<li><a href="../public/ctrl_d/ctrl_d.html">CTRL_D</a></li>
-							<li><a href="../public/projects/projects.html">Projects</a></li>
-							<li><a href="../public/about_me/about_me.html">About Me</a></li>
+							<li><a href="../ctrl_d/ctrl_d.html">CTRL_D</a></li>
+							<li><a href="../projects/projects.html">Projects</a></li>
+							<li><a href="../about_me/about_me.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/LukeSchwaller" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
